# rd_homework7

./: README.MD  asgi_app.py  fastapi_app.py  pyproject.toml  starlette_app.py  wsgi_app.py
