[tool.poetry]
name = "rd-homework7"
version = "0.1.0"
description = ""
authors = ["DL <dmitriy.luzanovsky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
quart = "^0.19.6"
starlette = "^0.38.2"
uvicorn = "^0.30.6"
fastapi = "^0.112.2"
gunicorn = "^23.0.0"
hypercorn = "^0.17.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
